Updated load screen and updated gradle to use java 14 again.